--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://liangpan99.github.io/TokenHSI"
+                <a href="https://arxiv.org/abs/2503.19901"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
