--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+        content="Introducing TokenHSI, a unified model that enables physics-based characters to perform diverse human-scene interaction tasks.">
+  <meta name="keywords" content="TokenHSI">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TokenHSI</title>
 
