--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@
         <h2 class="title is-5">(4) Long-horizon Task Completion in A Complex Dynamic Environment</h2>
       </div> 
       <div class="container is-max-desktop">
+
         <!-- First row -->
         <div class="columns is-centered">
           <div class="column">
@@ -486,7 +487,20 @@
               </div>
             </div>
           </div>
+
+          <div class="column">
+            <div class="content has-text-centered">
+              <div class="videobox">
+                <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
+                  <source src="./static/videos/challenging_new_tasks/longterm_demo_rendered.mp4" type="video/mp4">
+                </video>
+              </div>
+            </div>
+          </div>
+
+
         </div>
+
       </div>
     </div>
 
