--- a/index.html
+++ b/index.html
@@ -512,11 +512,30 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@inproceedings{pan2025tokenhsi,
-  author    = {Pan, Liang and Yang, Zeshi and Dou, Zhiyang and Wang, Wenjia and Huang, Buzhen and Dai, Bo and Komura, Taku and Wang, Jingbo},
-  title     = {TokenHSI: Unified Synthesis of Physical Human-Scene Interactions through Task Tokenization},
-  journal   = {CVPR},
-  year      = {2025},
+      title={TokenHSI: Unified Synthesis of Physical Human-Scene Interactions through Task Tokenization},
+      author={Pan, Liang and Yang, Zeshi and Dou, Zhiyang and Wang, Wenjia and Huang, Buzhen and Dai, Bo and Komura, Taku and Wang, Jingbo},
+      booktitle={CVPR},
+      year={2025},
 }</code></pre>
+  <!-- <br> -->
+  Please also consider citing the following papers that inspired TokenHSI.
+  <pre><code>@article{tessler2024maskedmimic,
+      title={Maskedmimic: Unified physics-based character control through masked motion inpainting},
+      author={Tessler, Chen and Guo, Yunrong and Nabati, Ofir and Chechik, Gal and Peng, Xue Bin},
+      journal={ACM Transactions on Graphics (TOG)},
+      volume={43},
+      number={6},
+      pages={1--21},
+      year={2024},
+      publisher={ACM New York, NY, USA}
+}
+@article{he2024hover,
+      title={Hover: Versatile neural whole-body controller for humanoid robots},
+      author={He, Tairan and Xiao, Wenli and Lin, Toru and Luo, Zhengyi and Xu, Zhenjia and Jiang, Zhenyu and Kautz, Jan and Liu, Changliu and Shi, Guanya and Wang, Xiaolong and others},
+      journal={arXiv preprint arXiv:2410.21229},
+      year={2024}
+}
+</code></pre>
   </div>
 </section>
 
