--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
     <div class="hero-body">
       <div class="columns is-centered has-text-centered">
-        <h2 class="title is-5">(4) Long-horizon Task Completion in A Complex Dynamic Environment</h2>
+        <h2 class="title is-5">(4) Long-horizon Task Completion in a Complex Dynamic Environment</h2>
       </div> 
       <div class="container is-max-desktop">
 
