--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
 
           <div style="font-size: 1.5em; margin-top: 10px; font-weight: bold; text-align: center;">
             CVPR 2025
+            <br>
+            <span style="color:#FF7777";>Oral Presentation (Top 3.3%)</span>
           </div>
 
           <div class="column has-text-centered">
@@ -163,7 +165,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (Coming Soon)</span>
+                  <span>Code</span>
                   </a>
               </span>
             </div>
