add brief describtions

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <div class="container is-max-desktop">
     <br>
     <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3"> <span style="color:#5e7dbd";>Foundational HSI Skills</span></h2>
+      <h2 class="title is-3"> <span style="color:#5e7dbd";>Foundational Skill Learning</span></h2>
     </div>
     <br>
     <div class="columns is-centered has-text-centered">
@@ -324,7 +324,7 @@
   <div class="hero-body">
     <br>
     <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3"> <span style="color:#069b1c" ;="">Challenging New Tasks </span></h2>
+      <h2 class="title is-3"> <span style="color:#069b1c" ;="">Policy Adaptation</span></h2>
     </div>
     <br>
     <div class="columns is-centered has-text-centered">
@@ -335,6 +335,10 @@
     <div class="hero-body">
       <div class="columns is-centered has-text-centered">
         <h2 class="title is-5">(1) Skill Composition</h2>
+      </div>
+      <br>
+      <div class="columns is-centered has-text-centered">
+        <h2 class="title is-6">We train a new task tokenizer to combine each of path-following, sitting, and climbing with carrying to create new composite skills.</h2>
       </div> 
       <div class="container">
         <div id="results-carousel" class="carousel results-carousel">
@@ -388,6 +392,10 @@
       <div class="columns is-centered has-text-centered">
         <h2 class="title is-5">(2) Object Shape Variation</h2>
       </div> 
+      <br>
+      <div class="columns is-centered has-text-centered">
+        <h2 class="title is-6">We fine-tune the task tokenizer (previously trained for box-carrying) to generalize it to more objects, such as chairs and tables.</h2>
+      </div> 
       <div class="container">
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-steve">
@@ -435,6 +443,10 @@
       <div class="columns is-centered has-text-centered">
         <h2 class="title is-5">(3) Terrain Shape Variation</h2>
       </div> 
+      <br>
+      <div class="columns is-centered has-text-centered">
+        <h2 class="title is-6">We introduce a new height map tokenizer to enable the humanoid to perform path-following and carrying tasks on uneven terrain.</h2>
+      </div> 
       <div class="container">
         <!-- First row -->
         <div class="columns is-centered">
@@ -475,6 +487,10 @@
     <div class="hero-body">
       <div class="columns is-centered has-text-centered">
         <h2 class="title is-5">(4) Long-horizon Task Completion in a Complex Dynamic Environment</h2>
+      </div> 
+      <br>
+      <div class="columns is-centered has-text-centered">
+        <h2 class="title is-6">We jointly fine-tune multiple task tokenizers to tackle challenges in long-horizon tasks, such as skill transition and collision avoidance.</h2>
       </div> 
       <div class="container is-max-desktop">
 
