--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <div style="font-size: 1.5em; margin-top: 10px; font-weight: bold; text-align: center;">
             CVPR 2025
             <br>
-            <span style="color:#FF7777";>Oral Presentation (Top 3.3%)</span>
+            🏆️ <span style="color:#FF7777";>Oral Presentation (Top 3.3%)</span>
           </div>
 
           <div class="column has-text-centered">
