update workshop acceptance

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
             🏆️ <span style="color:#FF7777";>Oral Presentation (Top 3.3%)</span>
           </div>
 
+          <p style="font-size: 1.5em;">Also <strong>Spotlight</strong> in The 1st Workshop on Humanoid Agents at CVPR 2025 </p>
+
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
